--- a/flixa_fashion/views/ff_designer_code_views.xml
+++ b/flixa_fashion/views/ff_designer_code_views.xml
@@ -8,12 +8,18 @@
 
     <!-- actions opening views on models -->
 
-    <record id="ff_division_code_action_window" model="ir.actions.act_window">
-      <field name="name">Division Codes</field>
-      <field name="res_model">ff.division.code</field>
+    <record id="ff_designer_code_action_window" model="ir.actions.act_window">
+      <field name="name">Designer Codes</field>
+      <field name="res_model">ff.designer.code</field>
       <field name="view_mode">tree,form</field>
     </record>
 
+
+    <!-- Top menu items TEMPORARY -->      
+      
+    <menuitem name="Flixa Fashion" id="flixa_base_menu" />
+    <menuitem name="Division Codes" id="ff_division_code_menu" parent="flixa_base_menu" action="ff_division_code_action_window"/>
+      
       
     <!-- explicit list view definition -->
 
