--- a/flixa_fashion/views/ff_product_views-Copy1.xml
+++ b/flixa_fashion/views/ff_product_views-Copy1.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <!-- Change Default product template view-->
         <record id="ff_product_template_only_form_view_inherit" model="ir.ui.view">
             <field name="name">ff.product.template.only.product.form</field>
             <field name="model">product.template</field>
@@ -23,14 +22,13 @@
                             </group>
                         </group>
                         <field name="attribute_line_ids" widget="one2many_list"
-                               context="{'show_attribute': False}" >
+                               context="{'show_attribute': False}">
                             <tree string="Variants" editable="bottom">
                                 <field name="attribute_id"/>
                                 <field name="value_ids" widget="many2many_tags"
                                        domain="[('attribute_id', '=', attribute_id)]"
                                        context="{'default_attribute_id': attribute_id}"/>
-                                <field name="is_size_scale_line" readonly="1" invisible="1"/>
-                                <field name="active" readonly="1" invisible="1"/>
+                                <field name="is_size_scale_line" readonly="1"/>
                             </tree>
                         </field>
                         <p class="oe_grey">
@@ -42,30 +40,6 @@
 
                 </xpath>
 
-            </field>
-        </record>
-        <!--Product Template Action to open variant: change order of views -->
-        <record id="product.product_variant_action" model="ir.actions.act_window">
-            <field name="name">Product Variants</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">product.product</field>
-            <field name="context">{'search_default_product_tmpl_id': [active_id], 'default_product_tmpl_id': active_id}</field>
-            <field name="search_view_id" ref="product.product_search_form_view"/>
-            <field name="view_ids"
-                   eval="[(5, 0, 0),
-                          (0, 0, {'view_mode': 'kanban'}),
-                          (0, 0, {'view_mode': 'tree'}),
-                          (0, 0, {'view_mode': 'form', 'view_id': ref('product.product_variant_easy_edit_view')})
-                          ]"/>
-            <field name="help" type="html">
-                <p class="o_view_nocontent_smiling_face">
-                    Create a new product variant
-                </p><p>
-                You must define a product for everything you sell, whether it's a physical product,
-                a consumable or a service you offer to customers.
-                The product form contains information to simplify the sale process:
-                price, notes in the quotation, accounting data, procurement methods, etc.
-            </p>
             </field>
         </record>
 
